--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
 
     //ExoPlayer
     implementation 'com.google.android.exoplayer:exoplayer:r2.5.2'
+
+    implementation 'com.android.volley:volley:1.1.0'
 }
